# rompatcher-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  justfile  rompatcher_js_hashes.txt  rustfmt.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/benches/: only_bench.rs
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: apply.rs  dispatch.rs  (+2 more)
crates/cli/tests/: only_modes_tests.rs  retroachievements_tests.rs
crates/core/: Cargo.toml
crates/core/src/: format.rs  lib.rs
crates/features/: Cargo.toml
crates/features/src/: lib.rs
crates/features/src/retroachievements/: api.rs  mod.rs  parser.rs  types.rs
crates/features/src/validation/: mod.rs  trait_def.rs  types.rs  validator.rs
crates/features/src/validation/algorithms/: crc32.rs  mod.rs
crates/features/tests/: validation_tests.rs
crates/formats/: Cargo.toml
crates/formats/benches/: aps_bench.rs  bdf_bench.rs  bps_bench.rs  ebp_bench.rs  ips_bench.rs  ppf_bench.rs  rup_bench.rs  ups_bench.rs  xdelta_bench.rs
crates/formats/src/: aps.rs  bps.rs  lib.rs  ppf.rs  rup.rs  ups.rs  xdelta.rs
crates/formats/tests/: aps_gba_integration.rs  aps_n64_integration.rs  bps_integration.rs  ebp_integration.rs  ips_integration.rs  ppf_integration.rs  rup_integration.rs  ups_integration.rs  xdelta_integration.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aps.rs  fuzz_bps.rs  fuzz_detect.rs  fuzz_ebp.rs  fuzz_ips.rs  fuzz_ppf.rs  fuzz_rup.rs  fuzz_ups.rs
test_files/: README.md
test_files/ebp/: patch.ebp
(+152 files in other folders)
