[package]
name = "rom-patcher-features"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Extended features for ROM patching (validation, hash checking, etc.)"

[dependencies]
rom-patcher-core = { path = "../core" }
thiserror.workspace = true
md5 = { version = "0.7", optional = true }
ureq = { version = "2.10", optional = true, features = ["json"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[features]
default = ["validation"]
validation = ["md5"]
retroachievements = ["md5", "ureq", "serde", "serde_json"]
